# sw-vehicle-breakdown

./: .envrc  .gitignore  Cargo.toml  README.md  perseus_Cargo.lock.patch  shell.nix
.cargo/: config.toml
.github/workflows/: autobuild.yml
src/: data.rs  main.rs
src/templates/: index.rs
static/: index.css
