[package]
name = "sw-price-breakdown"
version = "0.1.0"
repository = "https://github.com/PieKing1215/sw-vehicle-breakdown"
authors = ["PieKing1215"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
perseus = { version = "=0.4.2", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["DragEvent", "DataTransfer", "DataTransferItemList", "DataTransferItem", "File", "FileReader", "FileList", "HtmlInputElement" ] }
wasm-bindgen-futures = "0.4"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde-aux = "4.7.0"
chrono = { version = "0.4.40", features = ["serde"] }

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.2", features = [ "dflt-server" ] }

[target.'cfg(client)'.dependencies]
